src/objects/GVS_EnableRecordType__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GVS_Picklist__c</fullName>
        <label>Picklist</label>
        <referenceTo>GVS_Picklist__c</referenceTo>
        <relationshipLabel>Picklist RecordTypes</relationshipLabel>
        <relationshipName>PicklistRecordTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GlobalValueSetName__c</fullName>
        <formula>GVS_Picklist__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Value Set Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistName__c</fullName>
        <label>Picklist Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <label>RecordType Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectName__c</fullName>
        <label>SObject Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GVS - Enable RecordType</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GVS_RT-{0000}</displayFormat>
        <label>Enable RecordType Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GVS - Enable RecordTypes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>